--- a/rs-demo-premium-sleek-landing-page.html
+++ b/rs-demo-premium-sleek-landing-page.html
@@ -126,7 +126,7 @@
 							data-responsive_offset="on"
 
 
-							style="z-index: 8; white-space: nowrap; font-weight: 700;text-transform:left; color:#000">Ecommerce Platform</div>
+							style="z-index: 8; white-space: nowrap; font-weight: 700;text-transform:left; color:#000">Ecommerce<br/> Platform</div>
 
 						<!-- LAYER NR. 5 -->
 						<div class="tp-caption   tp-resizeme"
@@ -146,9 +146,9 @@
 							data-responsive_offset="on"
 
 
-							style="z-index: 9; min-width: 320px; max-width: 320px; white-space: normal; font-size: 15px; line-height: 24px; font-weight: 400;color:#000;font-family:Lato;text-transform:left;">We take things to a totally new level with this
-				highly usable and affordable app.<br/>
-				You will love what you see once you do! </div>
+							style="z-index: 9; min-width: 320px; max-width: 320px; white-space: normal; font-size: 15px; line-height: 24px; font-weight: 400;color:#000;font-family:Lato;text-transform:left;">Development for your online presence
+				does not have to be difficult.</br>
+				With a few simple steps you can get started!</div>
 
 						<!-- LAYER NR. 6 -->
 						<div class="tp-caption SleekLanding-ButtonBG tp-shape tp-shapewrapper  tp-resizeme"
@@ -303,7 +303,7 @@
 							data-responsive_offset="on"
 
 
-							style="z-index: 8; white-space: nowrap; font-weight: 700;text-transform:left;color:#000">Payment Platform</div>
+							style="z-index: 8; white-space: nowrap; font-weight: 700;text-transform:left;color:#000">Payment<br/> Platform</div>
 
 						<!-- LAYER NR. 5 -->
 						<div class="tp-caption   tp-resizeme"
@@ -323,7 +323,7 @@
 							data-responsive_offset="on"
 
 
-							style="z-index: 9; min-width: 320px; max-width: 320px; white-space: normal; font-size: 15px; line-height: 24px; font-weight: 400; color: #000;font-family:Lato;text-transform:left;">If you purchase a copy of Slider Revolution you will recieve unrestricted access to over<br/><span class="tp-fat">50</span> Ready-to-go Templates! </div>
+							style="z-index: 9; min-width: 320px; max-width: 320px; white-space: normal; font-size: 15px; line-height: 24px; font-weight: 400; color: #000;font-family:Lato;text-transform:left;">Simple integration for payment on the web<br/><span class="tp-fat"></span> Start taking online payments for your business! </div>
 
 						<!-- LAYER NR. 6 -->
 						<div class="tp-caption SleekLanding-ButtonBG tp-shape tp-shapewrapper  tp-resizeme"
@@ -729,7 +729,7 @@
 							data-startslide="0"
 							data-endslide="2"
 
-							style="z-index: 12;text-transform:left;"><img src="include/rs-plugin/demos/assets/images/dummy.png" alt="" width="350" height="650" data-ww="['700px','350px','350','350px']" data-hh="['1300px','650px','650','650px']" data-lazyload="include/rs-plugin/demos/assets/images/iphone_cutout.png" data-no-retina> </div>
+							style="z-index: 12;text-transform:left;"><img src="include/rs-plugin/demos/assets/images/dummy.png" alt="" width="350" height="650" data-ww="['700px','350px','350','350px']" data-hh="['1300px','650px','650','650px']" data-lazyload="iphone_cutout.png" data-no-retina> </div>
 					</div>
 
 
